# watery

./: .gitignore  LICENSE  makefile  manage.py  pyproject.toml
tracker/: admin.py  errors.py  models.py  serializers.py  tests.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_history_intake_delete_waterintake.py
watery_api/: asgi.py  settings.py  urls.py  wsgi.py
