[tool.poetry]
name = "watery-api"
version = "0.1.0"
description = ""
authors = ["Lucas de Freitas Ponick <lucas_ponick@hotmail.com>"]
readme = "README.md"
packages = [{include = "watery_api"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
